<resources>
    <string name="app_name">MediaPlayerExample</string>

    <string name="boton_login">Continuar</string>
    <string name="texto_switch">¿Recordar?</string>
    <string name="correo_textView">Correo</string>
    <string name="contraseña_textView">Contraseña</string>

    <string name="nowPlaying">Now playing:</string>
    <string name="trackName">trackname.mp3 </string>
    <string name="loopNotifString">The current track is in loop. </string>
    <string name="userAccount">admin@rickrolled.com</string>
    <string name="userName">Admin</string>


</resources>