<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blackColor">

        <ImageView
            android:id="@+id/spotiLogoView"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_gravity="center|center"
            android:layout_marginTop="90sp"
            android:src="@drawable/spotifylogogif"
            />

        <TextView
            android:id="@+id/textViewCorreo"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="45sp"
            android:textColor="@color/whiteColor"
            android:text="@string/correo_textView"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:layout_gravity="center|center"
            android:labelFor="@id/cajaTextoCorreo"/>

        <EditText
            android:id="@+id/cajaTextoCorreo"
            android:layout_width="256sp"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@color/whiteColor"
            android:padding="5sp"
            android:hint="admin@rickrolled.com"
            android:textColorHint="@color/grayColor"
            android:textColor="@color/blackColor"
            android:textStyle="italic"
            />

        <TextView
            android:id="@+id/textViewPass"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="15sp"
            android:text="@string/contraseña_textView"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="35sp"
            android:textStyle="bold"
            android:labelFor="@+id/cajaTextoPass"
            />

        <EditText
            android:id="@+id/cajaTextoPass"
            android:layout_width="256sp"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@color/whiteColor"
            android:padding="5sp"
            android:hint="12345"
            android:textColorHint="@color/grayColor"
            android:textColor="@color/blackColor"
            android:textStyle="italic"/>

        <Switch
            android:id="@+id/switchRecordar"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:text="@string/texto_switch"
            android:textColor="@color/continue_color"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/buttonContinuar"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15sp"
            android:text="@string/boton_login"
            android:backgroundTint="@color/continue_color"/>

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="103sp"
            android:layout_marginTop="15sp"
            android:text="@string/contraseña_textView"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="italic|bold"
            android:visibility="gone" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>





















































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































    <!--// Coded by Alejandro Ortega Maldonado aka SvanReilly in Github.-->