<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blackColor">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageButton
                android:id="@+id/backButtonView"
                android:layout_width="90sp"
                android:layout_height="50sp"
                android:scaleType="centerCrop"
                android:padding="1sp"

                android:layout_gravity="right"
                android:contentDescription="play button"
                android:src="@drawable/backplayerbutton" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>


        <View
            android:id="@+id/topDivider"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@color/blackColor" />

        <TextView
            android:id="@+id/midDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:visibility="visible"
            android:background="@color/blackColor"/>

        <TextView
            android:id="@+id/bottomDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30sp"
            android:text="USER"
            android:textSize="25sp"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@color/blackColor"/>

        <TextView
            android:id="@+id/userNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/userName"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/userAccountView"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/userAccount"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/loopNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/whiteColor"
            android:visibility="gone"
            android:textSize="20sp"
            android:text="@string/loopNotifString" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <View
            android:id="@+id/bottomDivider2"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@color/blackColor"/>

        <ImageButton
            android:id="@+id/logOutButtonView"
            android:layout_width="220sp"
            android:layout_height="80sp"
            android:layout_gravity="center"

            android:contentDescription="play button"
            android:padding="1sp"

            android:scaleType="centerCrop"
            android:src="@drawable/logoutbutton" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>












































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































    <!--// Coded by Alejandro Ortega Maldonado aka SvanReilly in Github.-->