<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blackColor">


        <ImageButton
            android:id="@+id/settingButton"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:scaleType="centerCrop"
            android:padding="1sp"
            android:layout_gravity="right"
            android:contentDescription="play button"
            android:src="@drawable/settingbutton" />

        <View
            android:id="@+id/topDivider"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@color/blackColor" />

        <ImageView
            android:id="@+id/nowPlayingCoverView"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:text="@string/nowPlaying"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:visibility="visible"/>

        <View
            android:id="@+id/midDivider"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@color/blackColor"/>

        <TextView
            android:id="@+id/trackNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trackName"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/artistNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="artist_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/albumNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="album_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:visibility="visible"/>

        <View
            android:id="@+id/bottomDivider"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@color/blackColor"/>

        <TextView
            android:id="@+id/loopNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/whiteColor"
            android:visibility="gone"
            android:textSize="20sp"
            android:text="@string/loopNotifString" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >


            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/loopButton"
                android:layout_width="70sp"
                android:layout_height="50sp"
                android:scaleType="fitXY"
                android:padding="1sp"
                android:layout_gravity="center"
                android:contentDescription="loop button"
                app:srcCompat="@drawable/looponbuttoff" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <ImageButton
                    android:id="@+id/stopButton"
                    android:layout_width="40sp"
                    android:layout_height="40sp"

                    android:padding="1sp"
                    android:layout_gravity="center"
                    android:contentDescription="stop button"
                    android:src="@drawable/stopbutton" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <View
            android:id="@+id/bottomDivider2"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:background="@color/blackColor"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/previousButton"
                android:layout_width="60sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:contentDescription="loop button"
                android:padding="1sp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/previousbutton" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="80sp"
                android:layout_height="70sp"
                android:scaleType="centerCrop"
                android:padding="1sp"
                android:layout_gravity="center"
                android:contentDescription="play button"
                android:src="@drawable/playbutton" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="60sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:contentDescription="loop button"
                android:padding="1sp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/nextbutton" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>








































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































    <!--// Coded by Alejandro Ortega Maldonado aka SvanReilly in Github.-->